--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,6 +1,11 @@
-.cont{
-    color: darkblue;
-    font-size: 25px;
-    margin-left: 400px;
-    margin-top: 250px;
+
+
+#imgbk{
+        background-image:url("D:\React\goldbox\public\ggnew.png");
+        height: 600px;
+        /* width: 1200px; */
+        background-position: none;
+        background-repeat: no-repeat;
+        background-size:none;  
+        
 }
