--- a/src/Login.css
+++ b/src/Login.css
@@ -1,10 +1,10 @@
 #box{
-    position:fixed;
+    position:relative;
     top: 20%;
     left: 49%;
     width:450px;
     height:400px;
-     
+    margin-top: 20px;
     margin-left: -10em; 
     border-radius: 5px;
     background-color: rgba(19, 19, 19, 0.895);
