--- a/src/MovieDetails.css
+++ b/src/MovieDetails.css
@@ -54,8 +54,9 @@
   /* padding: 20px 35px; */
   padding: 20px 35px;
   font-size: 19px;
-  margin-left: 800px;
-  margin-bottom: 50px;
+  float: right;
+  /* margin-left: 800px; */
+  margin-bottom: 100px;
   background-color: gold;
   border:none;
   border-radius: 20px;
