--- a/src/Movies.css
+++ b/src/Movies.css
@@ -8,7 +8,8 @@
 
 #searchText{
     font-size: 26px;
-    margin-right: 100px;
+    margin-left: 100px;
+    /* margin-right: 100px; */
     /* font-style: italic; */
     color: gold;
 }
