--- a/src/Theatre.css
+++ b/src/Theatre.css
@@ -1,3 +1,13 @@
+.TicketData{
+  background-color: black;
+  border-bottom: 2px solid gold;
+}
+
+.seatContainer{
+  display: flex;
+  background-color: black;
+}
+
 .check_box1 {
     /* margin-left: 23px; */
     /* display: none; */
@@ -10,17 +20,68 @@
     background:url("D:\React\goldbox\public\seat1.png") no-repeat;
     height: 30px;
     width: 30px;
-    /* margin-bottom: 100px; */
-     display: inline-block;
-    /* right: 10px; */
-    position: absolute;
-      padding: 0 0 0 0px;
+    margin-right: 20px;
+    color: gold;
+    margin-top: 12px;
   }
   .check_box1:checked + label{
     /* background-color: pink; */
     background:url("D:\React\goldbox\public\selected.png") no-repeat;
     height: 30px;
     width: 30px;
-     display:inline-block;
-    padding: 0 0 0 0px;
+    color: gold;
+     /* display:inline-block; */
+}
+
+.spseats{
+  margin-right: 120px;
+}
+
+.ticketInfo{
+  width: 300px;
+  height: 400px;
+  background-color: black;
+  border-left: 1px solid gold;
+  /* border-radius: 12px; */
+}
+
+.btrun{
+  width: 100px;
+  height:  45px;
+  background-color: gold;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 50px;
+  float: right;
+}
+
+.screentf{
+  /* margin-right: 300px; */
+  background-color: black;
+  
+}
+
+.screent{
+  border-bottom: 2px solid gold;
+  color: gold;
+}
+
+.screentag{
+  font-size: 20px;
+ /* float: ; */
+  color:gold;
+  margin-left: 300px;
+}
+
+.mvdetail{
+  margin-left: 300px;
+  /* position:absolute;
+   top: 10%;
+  left: 50%;  */
+  /* margin-top:-20px ; */
+  /* margin-left: -100px;  */
+}
+
+.mvTitle{
+  color:gold;
 }
